<resources>
    <string name="app_name">Incidencias CR</string>
    <string name="app_name_upper">INCIDENCIAS CR</string>

    //General
    <string name="img_gradient">gradient</string>
    <string name="txt_nueva_incidencia">NUEVA INCIDENCIA</string>
    <string name="txt_actualizacion_inciencia">ACTUALIZACIÓN DE \n INCIDENCIA</string>
    <string name="txt_confirmar">Confirmar</string>

    //Start menu

    <string name="btn_iniciar_sesion">INICIAR SESIÓN</string>
    <string name="img_caution">caution</string>
    <string name="txt_menu">Menú</string>

    //Login
    <string name="img_login">login</string>
    <string name="txt_correo_electronico">Correo Electrónico</string>
    <string name="txt_password">Contraseña</string>
    <string name="txt_ingresar">Ingresar</string>
    <string name="txt_nueva_cuenta">NUEVA CUENTA</string>
    <string name="txt_login">Inicio de Sesión</string>

    //New account
    <string name="txt_nombre">Nombre</string>
    <string name="txt_primer_apellido">Primer Apellido</string>
    <string name="txt_segundo_apellido">Segundo Apellido</string>
    <string name="txt_cedula">Cédula</string>
    <string name="txt_tel_cel">Tel/Cel</string>
    <string name="txt_correo_electronico_nueva_cuenta">Correo Electrónico</string>
    <string name="txt_direccion">Dirección</string>
    <string name="txt_password_nueva_cuenta">Contraseña</string>
    <string name="txt_confirmar_password_nueva_cuenta">Confirmar Contraseña</string>

    <string name="txt_registro">Registro</string>

    //Address
    <string name="txt_provincia">Provincia</string>
    <string-array name="Provincia">
        <item>San José</item>
        <item>Alajuela</item>
        <item>Cartago</item>
        <item>Heredia</item>
        <item>Guanacaste</item>
        <item>Puntarenas</item>
        <item>Limón</item>
    </string-array>

    //Cantones
    <string name="txt_canton">Cantón</string>
    <string-array name="Canton_San_Jose">
        <item>Acosta</item>
        <item>Alajuelita</item>
        <item>Aserri</item>
        <item>Desampakistan</item>
        <item>Curridabat</item>
        <item>Dota</item>
        <item>Goicoechea</item>
        <item>León Cortés Castro</item>
        <item>Montes de Oca</item>
        <item>Mora</item>
        <item>Moravia</item>
        <item>Puriscal</item>
        <item>San José</item>
        <item>Tarrazú</item>
        <item>Turrubares</item>
        <item>Vázquez de Coronado</item>
        <item>Escazú</item>
    </string-array>

    <string-array name="Canton_Alajuela">
        <item>Alajuela</item>
        <item>Atenas</item>
        <item>Grecia</item>
        <item>Guatuso</item>
        <item>Los Chiles</item>
        <item>Naranjo</item>
        <item>Orotina</item>
        <item>Palmares</item>
        <item>Poás</item>
        <item>Río Cuarto</item>
        <item>San Carlos</item>
        <item>San Mateo</item>
        <item>San Ramón</item>
        <item>Upala</item>
        <item>Valverde Vega</item>
        <item>Zarcero</item>
    </string-array>

    <string-array name="Canton_Heredia">
        <item>Barva</item>
        <item>Belén</item>
        <item>Flores</item>
        <item>Heredia</item>
        <item>San Isidro</item>
        <item>San Pablo</item>
        <item>San Rafael</item>
        <item>Santa Bárbara</item>
        <item>Santo Domingo</item>
        <item>Río Cuarto</item>
        <item>San Carlos</item>
        <item>San Mateo</item>
        <item>San Ramón</item>
        <item>Upala</item>
        <item>Valverde Vega</item>
        <item>Zarcero</item>
    </string-array>

    <string-array name="Canton_Cartago">
        <item>Alvarado</item>
        <item>Cartago</item>
        <item>El Guarco</item>
        <item>Jiménez</item>
        <item>La Unión</item>
        <item>Oreamuno</item>
        <item>Paraíso</item>
        <item>Turrialba</item>
    </string-array>

    <string-array name="Canton_Guanacaste">
        <item>Abangares</item>
        <item>Bagaces</item>
        <item>Cañas</item>
        <item>Carrillo</item>
        <item>Nicoya</item>
        <item>Hojancha</item>
        <item>La Cruz</item>
        <item>Liberia</item>
        <item>Nandayure</item>
        <item>Santa Cruz</item>
        <item>Tilarán</item>
    </string-array>

    <string-array name="Canton_Puntarenas">
        <item>Buenos Aires</item>
        <item>Corredores</item>
        <item>Coto Brus</item>
        <item>Esparza</item>
        <item>Garabito</item>
        <item>Golfito</item>
        <item>Montes de Oro</item>
        <item>Osa</item>
        <item>Parrita</item>
        <item>Puntarenas</item>
        <item>Quepos</item>
    </string-array>

    <string-array name="Canton_Limon">
        <item>Guacimo</item>
        <item>Limón</item>
        <item>Matina</item>
        <item>Pococí</item>
        <item>Siquirres</item>
        <item>Talamanca</item>
    </string-array>


    //Distritos
    <string name="txt_distrito">Distrito</string>
    <string-array name="Distrito_San_Jose">
        <item>Carmen</item>
        <item>Merced</item>
        <item>Hospital</item>
        <item>Catedral</item>
        <item>Zapote</item>
        <item>La Uruca</item>
        <item>Pavas</item>
        <item>San Sebastian</item>
        <item>San Miguel</item>
    </string-array>

    <string-array name="Distrito_Acosta">
        <item>San Ignacio</item>
        <item>Guaitil</item>
        <item>Palmichal</item>
        <item>Cangrejal</item>
        <item>Sabanillas</item>
        <item>La Uruca</item>
        <item>Pavas</item>
        <item>San Sebastian</item>
        <item>San Miguel</item>
    </string-array>

    <string-array name="Distrito_Alajuelita">
        <item>Alajuelita</item>
        <item>San Josesito</item>
        <item>San Antonio</item>
        <item>Concepción</item>
        <item>San Felipe</item>
    </string-array>


    //Account Activation
    <string name="txt_activacion">Ingrese el código de activación enviado a su email.</string>
    <string name="txt_codigo">Código</string>
    <string name="img_correo">Correo</string>


    //Menu
    <string name="txt_cerrar_sesion">CERRAR SESIÓN</string>


    //New incidence
    <string name="txt_categoria">Categoría</string>
    <string name="txt_entidad">Entidad</string>
    <string name="txt_detalle">Detalle</string>
    <string name="txt_agregar_imagen">Agregar imagen</string>
    <string name="txt_agregar_nueva_incidencia">Agregar nueva incidencia</string>

    <string-array name="Categoria">
        <item>Carretera</item>
        <item>Cera</item>
        <item>Señalizacion</item>
        <item>Obstrucción</item>
        <item>Acceso bloqueado</item>
        <item>Servicio Público</item>
        <item>Servicio Privado</item>
    </string-array>

    <string-array name="Entidad">
        <item>Municipalidad</item>
        <item>Gubernamental</item>
        <item>Cantón</item>
        <item>Privada</item>
        <item>ICE</item>
        <item>AyA</item>
        <item>Privada</item>
        <item>Otra</item>
    </string-array>

    //Incidence update
    <string name="txt_actualizar_incidencia">Seleccione un incidente para cambiar su estado.</string>
    <string name="txt_actualizar_incidencia_top_bar">Mis incidentes</string>
    <string name="img_list">imagenLista</string>
    <string name="txt_Nombre_lista">Código</string>
    <string name="title_activity_maps">Map</string>
    <string name="btn_incidencia_resuelta">Marcar como resuelta</string>
    <string name="txt_estado">Estado:</string>
    <string name="txt_categoria_titulo">Categoria:</string>
    <string name="txt_detalle_titulo">Detalle:</string>


    //Logout


</resources>
