<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Login">

    <ImageView
        android:id="@+id/img_gradient"
        android:layout_width="412dp"
        android:layout_height="224dp"
        android:contentDescription="@string/img_gradient"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/gradient" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="335dp"
        android:layout_height="542dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.491">

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name_upper"
            android:textColor="#FF9800"
            android:textSize="32sp"
            app:fontFamily="sans-serif-medium" />

        <ImageView
            android:id="@+id/img_login"
            android:layout_width="174dp"
            android:layout_height="105dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:contentDescription="@string/img_login"
            app:srcCompat="@drawable/login" />

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:backgroundTint="#21070000"
            android:ems="10"
            android:hint="@string/txt_correo_electronico"
            android:inputType="textEmailAddress"
            android:textColor="#61070000" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:backgroundTint="#21070000"
            android:ems="10"
            android:hint="@string/txt_password"
            android:inputType="textPassword"
            android:selectAllOnFocus="false"
            android:singleLine="false"
            android:textColor="#61070000" />

        <Button
            android:id="@+id/btn_ingresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:background="#41B3A3"
            android:text="@string/txt_ingresar"
            android:textColor="#FCFCFC"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_nueva_cuenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:background="#386760"
            android:text="@string/txt_nueva_cuenta"
            android:textColor="#FCFCFC"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>