<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountActivation"
    android:background="#FFFFFF">

    <ImageView
        android:id="@+id/img_gradient"
        android:layout_width="412dp"
        android:layout_height="224dp"
        android:contentDescription="@string/img_gradient"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/gradient"/>

    <LinearLayout
        android:layout_width="382dp"
        android:layout_height="match_parent"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_email"
            android:layout_width="175dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:contentDescription="@string/img_correo"
            app:srcCompat="@drawable/email" />

        <TextView
            android:id="@+id/txt_mensaje_codigo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/txt_activacion" />

        <EditText
            android:id="@+id/input_codigo"
            android:layout_width="356dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:backgroundTint="#21070000"
            android:ems="10"
            android:hint="@string/txt_codigo"
            android:inputType="number"
            android:textColor="#61070000" />

        <Button
            android:id="@+id/btn_confirmar"
            android:layout_width="283dp"
            android:layout_height="47dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:background="@drawable/btn_redondo_light"
            android:text="@string/txt_confirmar"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

