<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"

    tools:context=".NewAccount">

    <ImageView
        android:id="@+id/img_gradient"
        android:layout_width="412dp"
        android:layout_height="224dp"
        android:contentDescription="@string/img_gradient"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/gradient" />

    <LinearLayout
        android:layout_width="382dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/input_nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#21070000"
                android:ems="10"
                android:hint="@string/txt_nombre"
                android:inputType="textPersonName"
                android:textColor="#61070000" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/input_primer_apellido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:backgroundTint="#21070000"
                android:ems="10"
                android:hint="@string/txt_primer_apellido"
                android:inputType="textPersonName"
                android:textColor="#61070000" />

            <EditText
                android:id="@+id/input_segundo_apellido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:backgroundTint="#21070000"
                android:ems="10"
                android:hint="@string/txt_segundo_apellido"
                android:inputType="textPersonName"
                android:textColor="#61070000" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/input_cedula"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:backgroundTint="#21070000"
                android:ems="10"
                android:hint="@string/txt_cedula"
                android:inputType="number"
                android:textColor="#61070000"
                android:maxLength="9"/>

            <EditText
                android:id="@+id/input_tel_cel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:backgroundTint="#21070000"
                android:ems="10"
                android:hint="@string/txt_tel_cel"
                android:inputType="phone"
                android:textColor="#61070000"
                android:maxLength="8"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/input_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:backgroundTint="#21070000"
                android:ems="10"
                android:hint="@string/txt_correo_electronico_nueva_cuenta"
                android:inputType="textEmailAddress"
                android:textColor="#61070000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_marginTop="15dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_provincia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="@string/txt_provincia" />

                <Spinner
                    android:id="@+id/spinner_provincias"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_canton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="@string/txt_canton" />

                <Spinner
                    android:id="@+id/spinner_cantones"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="192dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_distrito"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/txt_distrito" />

                <Spinner
                    android:id="@+id/spinner_distritos"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="195dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/txt_direccion"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="#21070000"
                    android:ems="10"
                    android:hint="@string/txt_direccion"
                    android:inputType="textPersonName"
                    android:textColor="#61070000" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/input_password_nueva_cuenta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:backgroundTint="#21070000"
                android:ems="10"
                android:hint="@string/txt_password_nueva_cuenta"
                android:inputType="textPassword"
                android:textColor="#61070000"
                android:maxLength="30"/>

            <EditText
                android:id="@+id/input_password_nueva_cuenta_confirmacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:backgroundTint="#21070000"
                android:ems="10"
                android:hint="@string/txt_confirmar_password_nueva_cuenta"
                android:inputType="textPassword"
                android:maxLength="30"
                android:textColor="#61070000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_confirmar"
                android:layout_width="283dp"
                android:layout_height="47dp"
                android:background="@drawable/btn_redondo_light"
                android:text="@string/txt_confirmar"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.505"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.109" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>